--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -2,12 +2,25 @@
 \chapter{Simulazione polazioni planetarie}
 }
 
+\section{Distribuzione iniziale planetesimi}
+Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
+\begin{equation}
+\Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
+\end{equation}
+
+\begin{workout}[Initial planetesimal distro]
+Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8)
+\begin{align*}
+&\Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)\\
+&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+\end{align*}
+Icelines Mordasini 1141: inside where T exceeds sublimation
+\end{workout}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Funzione di massa sistemi planetari}
 }
 
-\begin{frame}{Impact of planet migration model on planetary populations: effects of saturation, cooling and stellar irradiation}
+{Impact of planet migration model on planetary populations: effects of saturation, cooling and stellar irradiation}
 Outward migration helps some planets to become massive, accumulation zone at certain semiaxis, at what mass corotation saturate?
 TOdo: mifration model
-\end{frame}
