--- a/seminario.bib
+++ b/seminario.bib
@@ -9,6 +9,18 @@
   publisher={IOP Publishing}
 }
 
+@article{lissauer1993planet,
+  title={Planet formation},
+  author={Lissauer, Jack J},
+  journal={Annual review of astronomy and astrophysics},
+  volume={31},
+  number={1},
+  pages={129--172},
+  year={1993},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
+
 @article{bouvier2002theory,
   title={Theory of turbulent accretion disks},
   author={Bouvier, J and Zahn, J-P and Terquem, CEJMLJ},
