--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -17,6 +17,14 @@ Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8
 Icelines Mordasini 1141: inside where T exceeds sublimation
 \end{workout}
 
+\section{Accrescimento dei protopianeti}
+
+La massa dei core varia secondo
+\begin{align}
+&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G\\
+&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+\end{align}
+
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Funzione di massa sistemi planetari}
 }
