--- a/seminario.bib
+++ b/seminario.bib
@@ -9,6 +9,17 @@
   publisher={IOP Publishing}
 }
 
+@article{rafikov2006atmospheres,
+  title={Atmospheres of protoplanetary cores: critical mass for nucleated instability},
+  author={Rafikov, Roman R},
+  journal={The Astrophysical Journal},
+  volume={648},
+  number={1},
+  pages={666},
+  year={2006},
+  publisher={IOP Publishing}
+}
+
 @article{lissauer1993planet,
   title={Planet formation},
   author={Lissauer, Jack J},
