--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -309,7 +309,7 @@ The origin of anisotropic velocity dispersion of particles in a disc potential (
 \end{itemize}
 \end{workout}
 
-\begin{workout}[orbital elements distribution: raylegh distro]
+\begin{workout}[orbital elements distribution: rayleigh distro]
 \begin{equation}
 I planetesimi hanno distribuzione di velocit\'a casuale, localmente equivalente a
 f(e,i)=4\frac{\sigma}{m}\frac{ei}{\exv{e^2}\exv{i^2}}\Exp{[-\frac{e^2}{\exv{e^2}}-\frac{}{\exv{i^2}}]}
@@ -342,6 +342,7 @@ lissauer pg 144: equapartition effect saturation. This regime is never observed 
 \end{workout}
 
 \begin{workout}[runaway growth]
+per planetesimi circa 1km (perch\'e?)
 \begin{equation}
 \frac{1}{m_p}\TDy{t}{m_p}\propto m_p\expy{1/3}
 \end{equation}
@@ -370,6 +371,10 @@ The growth of planetary embryos:  orderly, runaway, or oligarchic? (Rafikov 2002
 \TDy{t}{M_e}\approx\pi R_e^2\Omega mN\frac{v}{v_z}[1+\frac{2GM_e}{R_ev^2}]
 \end{align}
 Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accrescimento runaway: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}$. Accrescimento oligarchico: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$.
+\end{workout}
+
+\begin{workout}[Atmospheric drag increases accretion rate]
+
 \end{workout}
 
 \begin{workout}[Timescale of oligarchic growth]
