--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -36,6 +36,10 @@ eccesso pianeti gioviani a 1au in simulazioni??
 Constrain for core accretion model ofgiant planets: dynamical shakeup Nagasawa 05 Thommes08c
 \end{workout}
 
+\begin{workout}[Earth post-oligarchic growth]
+perryman pg229
+\end{workout}
+
 
 \begin{workout}[Planetesima migration: pluto eccentricity, large population of Kuiper belt object]
 
