attached phase: structure and luminosity

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -444,7 +444,7 @@ Mass conservation, hydrostatic equilibrium and energy transfer:
 Rafikov 10: ''Constraint on giant planet production by core accretion''
 Rafikov 04 Atmospheres of protoplanetary cores: critical mass for nucleated instability.
 Refs: Planet formation models: the interplay with the planetesimal disc (Fortier 2013), Characterization of exoplanets from their formation I. Models of combined planet formation and evolution (Mordasini 12)
-\end{workoput}
+\end{workout}
 
 \begin{workout}[Planet-Disk exchange in hydrodynamic manner]
 Ormel 15/ Cimerman 17
