ward97, terquem00, menou04

--- a/seminario.bib
+++ b/seminario.bib
@@ -20,6 +20,17 @@
   publisher={IOP Publishing}
 }
 
+@article{menou2004low,
+  title={Low-mass protoplanet migration in T Tauri $\alpha$-disks},
+  author={Menou, Kristen and Goodman, Jeremy},
+  journal={The Astrophysical Journal},
+  volume={606},
+  number={1},
+  pages={520},
+  year={2004},
+  publisher={IOP Publishing}
+}
+
 @article{lissauer1993planet,
   title={Planet formation},
   author={Lissauer, Jack J},
@@ -31,6 +42,16 @@
   publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
 }
 
+@article{terquem2000disks,
+  title={Disks, extrasolar planets and migration},
+  author={Terquem, Caroline and Papaloizou, John CB and Nelson, Richard P},
+  journal={Space Science Reviews},
+  volume={92},
+  number={1-2},
+  pages={323--340},
+  year={2000},
+  publisher={Springer}
+}
 
 @article{bouvier2002theory,
   title={Theory of turbulent accretion disks},
@@ -50,6 +71,17 @@
   pages={211--249},
   year={2012},
   publisher={Annual Reviews}
+}
+
+@article{ward1997protoplanet,
+  title={Protoplanet migration by nebula tides},
+  author={Ward, William R},
+  journal={Icarus},
+  volume={126},
+  number={2},
+  pages={261--281},
+  year={1997},
+  publisher={Elsevier}
 }
 
 @article{howard2012planet,
