--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -16,6 +16,16 @@ helioseismology and meteoritic dating
 pg 256: interior and atmosphere, 293 solar system, 143 properties of transit
 \end{workout}
 
+\begin{workout}[Degree of super-adiabaticity: Struttura interna (assimption for pre-runaway accretion)]
+See: characterization of exoplanets from their formation (pg4)
+Degree of super-adiabaticity: baraffe 02, Rafikof 07
+\end{workout}
+
+\begin{workout}[few well separeted homogeneous region: Struttura interna (assimption for pre-runaway accretion)]
+See: characterization of exoplanets from their formation (pg4)
+Baraffe 07: composition gradients, core dissolution: Wilson, Militzer 12, planetesimal deconstruction: mordasini 05, multiconvective layers: Leconte chabrier 12.
+\end{workout}
+
 \begin{workout}[Full packing/spacing]
 
 \end{workout}
